[gd_scene load_steps=7 format=3 uid="uid://stxk5m7beaem"]

[ext_resource type="PackedScene" uid="uid://dx7gudneqm4te" path="res://scenes/ui/inventory_panel.tscn" id="1_1qipa"]
[ext_resource type="Script" path="res://scenes/ui/sliding_inventory_panel.gd" id="1_s8o31"]

[sub_resource type="Animation" id="Animation_oxrb6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-40, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(60, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_sx6rv"]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60, -0.25, 0, 0.25, 0, 60, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_47ink"]
resource_name = "slide_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -50, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l26vp"]
_data = {
"RESET": SubResource("Animation_oxrb6"),
"slide_in": SubResource("Animation_sx6rv"),
"slide_out": SubResource("Animation_47ink")
}

[node name="SlidingInventoryPanel" type="Control"]
custom_minimum_size = Vector2(60, 240)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -120.0
offset_right = 10.0
offset_bottom = 120.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource("1_s8o31")

[node name="InventoryPanel" parent="." instance=ExtResource("1_1qipa")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = -120.0
offset_right = 0.0
offset_bottom = 120.0
grow_horizontal = 0
mouse_filter = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l26vp")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="InventoryPanel" to="." method="_on_inventory_panel_mouse_entered"]
[connection signal="mouse_exited" from="InventoryPanel" to="." method="_on_inventory_panel_mouse_exited"]
